--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/router": "^5.1.2",
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^2.0.1",
-    "angularfire2": "5.0.0-rc.4",
+    "angularfire2": "^5.0.0-rc.5-next",
     "chart.js": "^2.7.1",
     "core-js": "^2.5.3",
     "easy-pie-chart": "^2.1.7",
@@ -37,7 +37,7 @@
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
-    "ng-mdb-pro": "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
+    "ng-mdb-pro": "git+https://fdbab677d1494b5590791d1b5de3e14c775010db:x-oauth-basic@github.com/danielsogl/ng-mdb-pro.git",
     "ng2-logger": "^1.0.3",
     "rxjs": "^5.5.6",
     "screenfull": "^3.3.2",
@@ -45,7 +45,7 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
+    "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "^5.1.2",
     "@angular/language-service": "^5.1.2",
     "@compodoc/compodoc": "^1.0.5",
@@ -68,7 +68,7 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "^4.1.0",
     "tslint": "~5.8.0",
-    "typescript": "~2.4.2"
+    "typescript": "^2.7.0-dev.20171226"
   },
   "jest": {
     "preset": "jest-preset-angular",
