--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
+    "@agm/snazzy-info-window": "^1.0.0-beta.2",
     "@angular/animations": "^5.1.2",
     "@angular/common": "^5.1.2",
     "@angular/compiler": "^5.1.2",
@@ -41,6 +43,7 @@
     "ngx-file-drop": "^2.0.2",
     "rxjs": "^5.5.6",
     "screenfull": "^3.3.2",
+    "snazzy-info-window": "^1.1.1",
     "web-animations-js": "^2.3.1",
     "wowjs": "^1.1.3",
     "zone.js": "^0.8.19"
