--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^5.1.3",
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^2.0.1",
+    "angular-async-local-storage": "^3.1.1",
     "angularfire2": "^5.0.0-rc.5-next",
     "chart.js": "^2.7.1",
     "core-js": "^2.5.3",
