--- a/functions/package.json
+++ b/functions/package.json
@@ -23,7 +23,8 @@
     "imageinfo": "^1.0.4",
     "mkdirp": "^0.5.1",
     "mkdirp-promise": "^5.0.1",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "uuid": "^3.1.0"
   },
   "private": true
 }
