--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
     "@agm/snazzy-info-window": "^1.0.0-beta.2",
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "5.1.3",
+    "@angular/common": "5.1.3",
+    "@angular/compiler": "5.1.3",
+    "@angular/core": "5.1.3",
+    "@angular/forms": "5.1.3",
+    "@angular/http": "5.1.3",
+    "@angular/platform-browser": "5.1.3",
+    "@angular/platform-browser-dynamic": "5.1.3",
+    "@angular/router": "5.1.3",
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^2.0.1",
     "angular-async-local-storage": "^3.1.1",
@@ -51,8 +51,8 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.6.4",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
+    "@angular/compiler-cli": "5.1.3",
+    "@angular/language-service": "5.1.3",
     "@compodoc/compodoc": "^1.0.5",
     "@types/jasmine": "^2.8.3",
     "@types/jasminewd2": "~2.0.2",
