--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ jobs:
       before_script:
         - npm install -g firebase-tools
         - cd functions && npm install && cd ..
-      script: ng build --prod --env=dev
+      script: ng build --prod --env=dev --aot false
       after_success: firebase deploy -P staging --token $FIREBASE_TOKEN
 
     - stage: deploy to production
@@ -53,7 +53,7 @@ jobs:
       before_script:
         - npm install -g firebase-tools
         - cd functions && npm install && cd ..
-      script: ng build --prod
+      script: ng build --prod --aot false
       after_success:
         - firebase deploy -P prod --token $FIREBASE_TOKEN
 
