--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngx-translate/core": "^9.1.0",
     "@ngx-translate/http-loader": "^2.0.1",
     "angular-async-local-storage": "^3.1.1",
+    "angular-pipes": "^6.5.3",
     "angularfire2": "^5.0.0-rc.5-next",
     "chart.js": "^2.7.1",
     "core-js": "^2.5.3",
