--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,20 +8,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"]
   },
-  "include": [
-    "node_modules/ng-mdb-pro/**/*.ts",
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "src/test.ts",
-    "src/environments/*.ts"
-  ]
+  "include": ["node_modules/ng-mdb-pro/**/**/*.ts", "src/**/*.ts"],
+  "exclude": ["src/test.ts", "src/environments/*.ts"]
 }
