--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "chart.js": "^2.7.1",
     "core-js": "^2.5.3",
     "easy-pie-chart": "^2.1.7",
-    "firebase": "4.8.0",
+    "firebase": "^4.8.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
