--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2017", "dom"]
   },
-  "include": ["node_modules/ng-mdb-pro/**/**/*.ts", "src/**/*.ts"],
+  "include": ["node_modules/ng-mdb-pro/**/*.ts", "src/**/*.ts"],
   "exclude": ["src/test.ts", "src/environments/*.ts"]
 }
