--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ jobs:
     - stage: Unit
       script: npm run test:ci
 
-    - stage: E2E
-      script: npm run e2e
+    # - stage: E2E
+    #   script: npm run e2e
 
     # - stage: coverage
     #   script:
