--- a/functions/package.json
+++ b/functions/package.json
@@ -23,6 +23,7 @@
     "imageinfo": "^1.0.4",
     "mkdirp": "^0.5.1",
     "mkdirp-promise": "^5.0.1",
+    "nodemailer": "^4.4.2",
     "request-promise": "^4.2.2",
     "uuid": "^3.2.1"
   },
