--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "chart.js": "^2.7.1",
     "core-js": "^2.5.3",
     "easy-pie-chart": "^2.1.7",
+    "file-saver": "^1.3.3",
     "firebase": "^4.9.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
+    "jszip": "^3.1.5",
     "localforage": "^1.5.6",
     "lodash": "^4.17.4",
     "ng-lazyload-image": "^3.4.2",
@@ -57,6 +59,7 @@
     "@types/jasmine": "^2.8.4",
     "@types/jasminewd2": "~2.0.2",
     "@types/jest": "^22.0.1",
+    "@types/jszip": "^3.1.3",
     "@types/localforage": "0.0.34",
     "@types/node": "^9.3.0",
     "codelyzer": "^4.1.0",
