--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ jobs:
 
     - stage: deploy to staging
       if: type IN (push)
+      if: branch = staging
       before_script:
         - npm install -g firebase-tools
         - cd functions && npm install && cd ..
